--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Stiskněte tlačítko% na ovládacím panelu, aby jste ho aktivovali.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Příkazy hlasového asistenta",
     "edit_favorites": "Upravit oblíbené",
     "dom_hot_water": "Teplá voda",
     "delete_all_schedu_tips": "Jste si jisti, že chcete smazat všechna plánování?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Zařízení je v pohotovostním režimu, nelze spustit ECO",
     "remote_control_not_support_eco": "Dálkové ovládání není zapnuté, nelze spustit ECO",
     "convert_model_not_support_eco": "Zařízení je v režimu Convert, nelze spustit ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Pro úspěšné odeslání hlasových příkazů do zařízení se ujistěte, že používáte název zařízení nastavený v aplikaci Amazon Alexa.",
+    "va_google_commands_tips": "Chcete-li do zařízení úspěšně odeslat hlasové příkazy, ujistěte se, že používáte název zařízení nastavený v aplikaci Google.",
+    "va_alexa_commands_link_tips": "Chcete-li používat hlasové příkazy, propojte svůj Amazon Alexa.",
+    "va_google_commands_link_tips": "Chcete-li používat hlasové příkazy, propojte se s Googlem.",
+    "link_amazon_alexa": "Odkaz amazon alexa",
+    "link_google": "Odkaz na google",
     "issue_category": "Kategorie problému",
     "select_issue_category": "Vyberte kategorii problému",
     "issue_cant_connect_device": "Nemohu připojit své zařízení",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Právní",
     "CL_CF_LG_enduser_privacy": "Zásady ochrany osobních údajů",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## zařízení běží v režimu ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti na provozním režimu zařízení nemusí být některé funkce provedeny úspěšně."
 }
