--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Presione el botón% en el panel de control para habilitarlo.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Comandos del asistente de voz",
     "edit_favorites": "Editar favoritos",
     "dom_hot_water": "Agua caliente doméstica",
     "delete_all_schedu_tips": "¿Estás seguro de que deseas eliminar toda la programación?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "El dispositivo está en modo de espera, no se puede iniciar ECO",
     "remote_control_not_support_eco": "El control remoto no está activado, no se puede iniciar ECO",
     "convert_model_not_support_eco": "El dispositivo está en modo Convert, no se puede iniciar ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Para enviar correctamente comandos de voz al dispositivo, asegúrese de utilizar el nombre del dispositivo configurado en la aplicación Amazon Alexa.",
+    "va_google_commands_tips": "Para enviar correctamente comandos de voz al dispositivo, asegúrese de utilizar el nombre del dispositivo configurado en la aplicación de Google.",
+    "va_alexa_commands_link_tips": "Para usar comandos de voz, vincule su Amazon Alexa.",
+    "va_google_commands_link_tips": "Para usar comandos de voz, vincúlese a Google.",
+    "link_amazon_alexa": "enlace amazon alexa",
+    "link_google": "enlace google",
     "issue_category": "Categoría de problema",
     "select_issue_category": "Seleccionar categoría de problema",
     "issue_cant_connect_device": "No puedo conectar mi dispositivo",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Legal",
     "CL_CF_LG_enduser_privacy": "Política de privacidad de datos",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispositivos están ejecutando el modo ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Según el modo operativo del dispositivo, es posible que algunas funciones no se ejecuten correctamente."
 }
