--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Nyomja meg a% gombot a vezérlőpulton, hogy bekapcsolja.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Voice Assistant parancsok",
     "edit_favorites": "Kedvencek szerkesztése",
     "dom_hot_water": "Háztartási meleg víz",
     "delete_all_schedu_tips": "Biztosan törölni szeretné az összes ütemezést?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Az eszköz készenléti módban van, nem tudja elindítani az ECO-t",
     "remote_control_not_support_eco": "A távirányító nincs bekapcsolva, nem tudja elindítani az ECO-t",
     "convert_model_not_support_eco": "Az eszköz Convert módban van, nem tudja elindítani az ECO-t",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "A hangutasítások eszközre történő sikeres küldéséhez győződjön meg arról, hogy az Amazon Alexa alkalmazásban beállított eszköznevet használja.",
+    "va_google_commands_tips": "A hangutasítások eszközre való sikeres küldéséhez feltétlenül használja a Google alkalmazásban beállított eszköznevet.",
+    "va_alexa_commands_link_tips": "Hangutasítások használatához kapcsolja össze Amazon Alexát.",
+    "va_google_commands_link_tips": "Hangutasítások használatához kapcsolja össze a Google-lal.",
+    "link_amazon_alexa": "Link amazon alexa",
+    "link_google": "Linkeld a google-t",
     "issue_category": "Probléma kategória",
     "select_issue_category": "Válassza ki a probléma kategóriáját",
     "issue_cant_connect_device": "Nem tudom csatlakoztatni a készüléket",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Jogi",
     "CL_CF_LG_enduser_privacy": "Adatvédelmi szabályzat",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## készülékek ECO módot futtatnak",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Az eszköz működési módjától függően előfordulhat, hogy egyes funkciók végrehajtása nem sikerül."
 }
