--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Tekan tombol% di panel kontrol untuk mengaktifkannya.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Perintah Asisten Suara",
     "edit_favorites": "Edit favorit",
     "dom_hot_water": "Air panas domestik",
     "delete_all_schedu_tips": "Adakah anda pasti mahu memadamkan semua jadual?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Perangkat dalam mode siaga, tidak dapat memulai ECO",
     "remote_control_not_support_eco": "Kontrol jarak jauh tidak diaktifkan, tidak dapat memulai ECO",
     "convert_model_not_support_eco": "Perangkat dalam mode Convert, tidak dapat memulai ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Agar berhasil mengirimkan perintah suara ke perangkat, pastikan untuk menggunakan nama perangkat yang diatur di aplikasi Amazon Alexa.",
+    "va_google_commands_tips": "Agar berhasil mengirim perintah suara ke perangkat, pastikan untuk menggunakan nama perangkat yang disetel di Google app.",
+    "va_alexa_commands_link_tips": "Untuk menggunakan perintah suara, tautkan Amazon Alexa Anda.",
+    "va_google_commands_link_tips": "Untuk menggunakan perintah suara, tautkan Anda ke Google.",
+    "link_amazon_alexa": "Tautan amazon alexa",
+    "link_google": "Tautan Google",
     "issue_category": "Kategori masalah",
     "select_issue_category": "Pilih kategori masalah",
     "issue_cant_connect_device": "Saya tidak dapat menghubungkan perangkat saya",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Hukum",
     "CL_CF_LG_enduser_privacy": "Kebijakan Privasi Data",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## perangkat menjalankan mode ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mode pengoperasian perangkat, beberapa fitur mungkin tidak berhasil dijalankan."
 }
