--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Premere il pulsante% sul pannello di controllo per abilitarlo.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Comandi dell'assistente vocale",
     "edit_favorites": "Modifica preferiti",
     "dom_hot_water": "Acqua calda sanitaria",
     "delete_all_schedu_tips": "Sei sicuro di voler eliminare tutta la pianificazione?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Il dispositivo è in modalità standby, impossibile avviare ECO",
     "remote_control_not_support_eco": "Il telecomando non è attivato, impossibile avviare ECO",
     "convert_model_not_support_eco": "Il dispositivo è in modalità Convert, impossibile avviare ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Per inviare correttamente i comandi vocali al dispositivo, assicurati di utilizzare il nome del dispositivo impostato nell'app Amazon Alexa.",
+    "va_google_commands_tips": "Per inviare correttamente i comandi vocali al dispositivo, assicurati di utilizzare il nome del dispositivo impostato nell'app Google.",
+    "va_alexa_commands_link_tips": "Per utilizzare i comandi vocali, collega il tuo Amazon Alexa.",
+    "va_google_commands_link_tips": "Per utilizzare i comandi vocali, collegati a Google.",
+    "link_amazon_alexa": "Collega Amazon Alexa",
+    "link_google": "Collega Google",
     "issue_category": "Categoria di problema",
     "select_issue_category": "Seleziona la categoria del problema",
     "issue_cant_connect_device": "Non riesco a connettere il mio dispositivo",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Legale",
     "CL_CF_LG_enduser_privacy": "Informativa sulla privacy dei dati",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispositivi stanno utilizzando la modalità ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "In base alla modalità operativa del dispositivo, alcune funzionalità potrebbero non essere eseguite correttamente."
 }
