--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Trykk på% -knappen på kontrollpanelet for å aktivere den.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Stemmeassistentkommandoer",
     "edit_favorites": "Rediger favoritter",
     "dom_hot_water": "Varmt vann",
     "delete_all_schedu_tips": "Er du sikker på, at du vil slette al tidsplanlægning?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Enheten er i standby-modus og kan ikke starte ECO",
     "remote_control_not_support_eco": "Fjernkontrollen er ikke aktivert, kan ikke starte ECO",
     "convert_model_not_support_eco": "Enheten er i Convert-modus og kan ikke starte ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "For å kunne sende talekommandoer til enheten, sørg for å bruke enhetsnavnet angitt i Amazon Alexa-appen.",
+    "va_google_commands_tips": "For å kunne sende talekommandoer til enheten, sørg for å bruke enhetsnavnet angitt i Google-appen.",
+    "va_alexa_commands_link_tips": "For å bruke talekommandoer, koble til Amazon Alexa.",
+    "va_google_commands_link_tips": "For å bruke talekommandoer, koble deg til Google.",
+    "link_amazon_alexa": "Link til amazon alexa",
+    "link_google": "Link google",
     "issue_category": "Problemkategori",
     "select_issue_category": "Velg problemkategori",
     "issue_cant_connect_device": "Jeg kan ikke koble til enheten min",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Lovlig",
     "CL_CF_LG_enduser_privacy": "Retningslinjer for personvern",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## enheter kjører ECO-modus",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Basert på enhetens driftsmodus kan det hende at enkelte funksjoner ikke blir utført."
 }
