--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Druk op de% knop op het bedieningspaneel om deze in te schakelen.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Spraakassistent-opdrachten",
     "edit_favorites": "Favorieten bewerken",
     "dom_hot_water": "Warm water",
     "delete_all_schedu_tips": "Weet u zeker dat u alle planning wilt verwijderen?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Het apparaat bevindt zich in de stand-bymodus, kan ECO niet starten",
     "remote_control_not_support_eco": "Afstandsbediening is niet ingeschakeld, kan ECO niet starten",
     "convert_model_not_support_eco": "Het apparaat bevindt zich in de Convert-modus, kan ECO niet starten",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Om met succes spraakopdrachten naar het apparaat te verzenden, moet u ervoor zorgen dat u de apparaatnaam gebruikt die is ingesteld in de Amazon Alexa-app.",
+    "va_google_commands_tips": "Als u spraakopdrachten naar het apparaat wilt verzenden, moet u de apparaatnaam gebruiken die is ingesteld in de Google-app.",
+    "va_alexa_commands_link_tips": "Om spraakopdrachten te gebruiken, koppelt u uw Amazon Alexa.",
+    "va_google_commands_link_tips": "Als u spraakopdrachten wilt gebruiken, koppelt u uw Google.",
+    "link_amazon_alexa": "Link Amazon-Alexa",
+    "link_google": "Link googlen",
     "issue_category": "Probleemcategorie",
     "select_issue_category": "Selecteer probleemcategorie",
     "issue_cant_connect_device": "Ik kan mijn apparaat niet verbinden",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Legaal",
     "CL_CF_LG_enduser_privacy": "Gegevensprivacybeleid",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## apparaten gebruiken de ECO-modus",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Afhankelijk van de bedieningsmodus van het apparaat worden sommige functies mogelijk niet met succes uitgevoerd."
 }
