--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Naciśnij przycisk% na panelu sterowania, aby go włączyć.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Polecenia asystenta głosowego",
     "edit_favorites": "Edytuj ulubione",
     "dom_hot_water": "Ciepła woda użytkowa",
     "delete_all_schedu_tips": "Czy na pewno chcesz usunąć cały harmonogram?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Urządzenie jest w trybie gotowości, nie można uruchomić ECO",
     "remote_control_not_support_eco": "Zdalne sterowanie nie jest włączone, nie można uruchomić ECO",
     "convert_model_not_support_eco": "Urządzenie jest w trybie Convert, nie można uruchomić ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Aby pomyślnie wysłać polecenia głosowe do urządzenia, upewnij się, że używasz nazwy urządzenia ustawionej w aplikacji Amazon Alexa.",
+    "va_google_commands_tips": "Aby pomyślnie wysyłać polecenia głosowe na urządzenie, upewnij się, że używasz nazwy urządzenia ustawionej w aplikacji Google.",
+    "va_alexa_commands_link_tips": "Aby korzystać z poleceń głosowych, połącz swoją Amazon Alexa.",
+    "va_google_commands_link_tips": "Aby używać poleceń głosowych, połącz się z Google.",
+    "link_amazon_alexa": "Połącz Amazonkę z Alexą",
+    "link_google": "Link do Google'a",
     "issue_category": "Kategoria problemu",
     "select_issue_category": "Wybierz kategorię problemu",
     "issue_cant_connect_device": "Nie mogę połączyć mojego urządzenia",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Prawny",
     "CL_CF_LG_enduser_privacy": "Polityka prywatności danych",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## urządzenia działają w trybie ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "W zależności od trybu pracy urządzenia niektóre funkcje mogą nie zostać pomyślnie wykonane."
 }
