--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Нажмите кнопку% на панели управления, чтобы включить ее.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Команды голосового помощника",
     "edit_favorites": "Редактировать избранное",
     "dom_hot_water": "Горячая вода",
     "delete_all_schedu_tips": "Вы уверены, что хотите удалить все расписания?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Устройство находится в режиме ожидания и не может запустить ECO",
     "remote_control_not_support_eco": "Дистанционное управление не включено, невозможно запустить ECO",
     "convert_model_not_support_eco": "Устройство находится в режиме Convert и не может запустить ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Чтобы успешно отправлять голосовые команды на устройство, обязательно используйте имя устройства, заданное в приложении Amazon Alexa.",
+    "va_google_commands_tips": "Чтобы успешно отправлять голосовые команды на устройство, обязательно используйте имя устройства, заданное в приложении Google.",
+    "va_alexa_commands_link_tips": "Чтобы использовать голосовые команды, подключите Amazon Alexa.",
+    "va_google_commands_link_tips": "Чтобы использовать голосовые команды, подключите Google.",
+    "link_amazon_alexa": "Ссылка на амазонку алексу",
+    "link_google": "Ссылка на Google",
     "issue_category": "Категория проблемы",
     "select_issue_category": "Выберите категорию проблемы",
     "issue_cant_connect_device": "Я не могу подключить свое устройство",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Юридический",
     "CL_CF_LG_enduser_privacy": "Политика конфиденциальности данных",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## устройств работают в экономичном режиме",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "В зависимости от режима работы устройства некоторые функции могут выполняться некорректно."
 }
