--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Stlačte tlačidlo% na ovládacom paneli, aby ste ho aktivovali.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Príkazy hlasového asistenta",
     "edit_favorites": "Upraviť obľúbené",
     "dom_hot_water": "Teplá voda",
     "delete_all_schedu_tips": "Ste si istí, že chcete odstrániť všetky plánovania?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Zariadenie je v pohotovostnom režime, nemožno spustiť ECO",
     "remote_control_not_support_eco": "Diaľkové ovládanie nie je zapnuté, nemožno spustiť ECO",
     "convert_model_not_support_eco": "Zariadenie je v režime Convert, nemožno spustiť ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Ak chcete úspešne odoslať hlasové príkazy do zariadenia, uistite sa, že používate názov zariadenia nastavený v aplikácii Amazon Alexa.",
+    "va_google_commands_tips": "Ak chcete úspešne odoslať hlasové príkazy do zariadenia, uistite sa, že používate názov zariadenia nastavený v aplikácii Google.",
+    "va_alexa_commands_link_tips": "Ak chcete používať hlasové príkazy, prepojte svoj Amazon Alexa.",
+    "va_google_commands_link_tips": "Ak chcete používať hlasové príkazy, prepojte vás s Google.",
+    "link_amazon_alexa": "Odkaz amazon alexa",
+    "link_google": "Odkaz na google",
     "issue_category": "Kategória problému",
     "select_issue_category": "Vyberte kategóriu problému",
     "issue_cant_connect_device": "Nemôžem pripojiť svoje zariadenie",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Právne",
     "CL_CF_LG_enduser_privacy": "Zásady ochrany osobných údajov",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## zariadení je spustených v režime ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti od prevádzkového režimu zariadenia sa niektoré funkcie nemusia úspešne spustiť."
 }
