--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Pritisnite gumb% na nadzorni plošči, da ga omogočite.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Ukazi glasovnega pomočnika",
     "edit_favorites": "Uredi priljubljene",
     "dom_hot_water": "Topla voda",
     "delete_all_schedu_tips": "Ali ste prepričani, da želite izbrisati ves razpored?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Naprava je v stanju pripravljenosti, ni mogoče zagnati ECO",
     "remote_control_not_support_eco": "Daljinsko upravljanje ni omogočeno, ni mogoče zagnati ECO",
     "convert_model_not_support_eco": "Naprava je v načinu Convert, ni mogoče zagnati ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Za uspešno pošiljanje glasovnih ukazov v napravo uporabite ime naprave, nastavljeno v aplikaciji Amazon Alexa.",
+    "va_google_commands_tips": "Za uspešno pošiljanje glasovnih ukazov v napravo uporabite ime naprave, nastavljeno v aplikaciji Google.",
+    "va_alexa_commands_link_tips": "Če želite uporabljati glasovne ukaze, povežite svojo Amazon Alexa.",
+    "va_google_commands_link_tips": "Če želite uporabljati glasovne ukaze, povežite Google.",
+    "link_amazon_alexa": "Povezava amazon alexa",
+    "link_google": "Poveži google",
     "issue_category": "Kategorija izdaje",
     "select_issue_category": "Izberite kategorijo težave",
     "issue_cant_connect_device": "Ne morem povezati svoje naprave",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Pravno",
     "CL_CF_LG_enduser_privacy": "Politika zasebnosti podatkov",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## naprave delujejo v načinu ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Glede na način delovanja naprave nekatere funkcije morda ne bodo uspešno izvedene."
 }
