--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Притисните дугме% на контролној табли да бисте га омогућили.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Команде гласовног помоћника",
     "edit_favorites": "Uredi omiljene",
     "dom_hot_water": "Topla voda",
     "delete_all_schedu_tips": "Da li ste sigurni da želite izbrisati sve rasporede?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Uređaj je u stanju pripravnosti, ne može pokrenuti ECO",
     "remote_control_not_support_eco": "Daljinsko upravljanje nije omogućeno, ne može pokrenuti ECO",
     "convert_model_not_support_eco": "Uređaj je u načinu Convert, ne može pokrenuti ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Да бисте успешно послали гласовне команде на уређај, обавезно користите назив уређаја постављен у апликацији Амазон Алека.",
+    "va_google_commands_tips": "Да бисте успешно послали гласовне команде уређају, обавезно користите назив уређаја подешен у апликацији Гоогле.",
+    "va_alexa_commands_link_tips": "Да бисте користили гласовне команде, повежите свој Амазон Алека.",
+    "va_google_commands_link_tips": "Да бисте користили гласовне команде, повежите Гоогле.",
+    "link_amazon_alexa": "Линк амазон алека",
+    "link_google": "Линк гоогле",
     "issue_category": "Kategorija izdanja",
     "select_issue_category": "Izaberite kategoriju problema",
     "issue_cant_connect_device": "Ne mogu da povežem svoj uređaj",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Правни",
     "CL_CF_LG_enduser_privacy": "Политика приватности података",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## уређаји користе ЕЦО режим",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "У зависности од режима рада уређаја, неке функције се можда неће успешно извршити."
 }
