--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Tryck på% -knappen på kontrollpanelen för att aktivera den.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Röstassistentkommandon",
     "edit_favorites": "Redigera favoriter",
     "dom_hot_water": "Varmvatten",
     "delete_all_schedu_tips": "Är du säker på att du vill ta bort alla schemaläggningar?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Enheten är i standby-läge och kan inte starta ECO",
     "remote_control_not_support_eco": "Fjärrkontrollen är inte aktiverad, kan inte starta ECO",
     "convert_model_not_support_eco": "Enheten är i Convert-läge och kan inte starta ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "För att lyckas skicka röstkommandon till enheten, se till att använda enhetsnamnet som ställts in i Amazon Alexa-appen.",
+    "va_google_commands_tips": "För att lyckas skicka röstkommandon till enheten, se till att använda enhetsnamnet som ställts in i Google-appen.",
+    "va_alexa_commands_link_tips": "För att använda röstkommandon, länka din Amazon Alexa.",
+    "va_google_commands_link_tips": "För att använda röstkommandon, länka dig till Google.",
+    "link_amazon_alexa": "Länk amazon alexa",
+    "link_google": "Länka google",
     "issue_category": "Problemkategori",
     "select_issue_category": "Välj problemkategori",
     "issue_cant_connect_device": "Jag kan inte ansluta min enhet",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Rättslig",
     "CL_CF_LG_enduser_privacy": "Datasekretesspolicy",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## enheter kör ECO-läge",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Baserat på enhetens driftläge kanske vissa funktioner inte körs korrekt."
 }
