--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "โปรดกดปุ่ม% บนแผงควบคุมเพื่อเปิดใช้งาน",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "คำสั่งผู้ช่วยเสียง",
     "edit_favorites": "แก้ไขรายการโปรด",
     "dom_hot_water": "น้ำร้อนใช้ในบ้าน",
     "delete_all_schedu_tips": "คุณแน่ใจหรือไม่ว่าต้องการลบการจัดตารางเวลาทั้งหมด?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "อุปกรณ์อยู่ในโหมดสแตนด์บาย ไม่สามารถเริ่ม ECO ได้",
     "remote_control_not_support_eco": "การควบคุมระยะไกลไม่ได้เปิดใช้งาน ไม่สามารถเริ่ม ECO ได้",
     "convert_model_not_support_eco": "อุปกรณ์อยู่ในโหมด Convert ไม่สามารถเริ่ม ECO ได้",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "หากต้องการส่งคำสั่งเสียงไปยังอุปกรณ์ได้สำเร็จ ตรวจสอบให้แน่ใจว่าใช้ชื่ออุปกรณ์ที่ตั้งไว้ในแอป Amazon Alexa",
+    "va_google_commands_tips": "หากต้องการส่งคำสั่งเสียงไปยังอุปกรณ์ได้สำเร็จ โปรดใช้ชื่ออุปกรณ์ที่ตั้งไว้ในแอป Google",
+    "va_alexa_commands_link_tips": "หากต้องการใช้คำสั่งเสียง ให้เชื่อมโยง Amazon Alexa ของคุณ",
+    "va_google_commands_link_tips": "หากต้องการใช้คำสั่งเสียง ให้ลิงก์ Google ของคุณ",
+    "link_amazon_alexa": "ลิงค์อเมซอน alexa",
+    "link_google": "ลิงค์กูเกิ้ล",
     "issue_category": "หมวดหมู่ปัญหา",
     "select_issue_category": "เลือกหมวดหมู่ปัญหา",
     "issue_cant_connect_device": "ฉันไม่สามารถเชื่อมต่ออุปกรณ์ของฉันได้",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "ถูกกฎหมาย",
     "CL_CF_LG_enduser_privacy": "นโยบายความเป็นส่วนตัวของข้อมูล",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## อุปกรณ์กำลังใช้งานโหมด ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "ขึ้นอยู่กับโหมดการทำงานของอุปกรณ์ คุณสมบัติบางอย่างอาจไม่สามารถทำงานได้สำเร็จ"
 }
