--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Nhấn nút% trên bảng điều khiển để bật nó.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Lệnh trợ lý giọng nói",
     "edit_favorites": "Chỉnh sửa mục yêu thích",
     "dom_hot_water": "Nước nóng sinh hoạt",
     "delete_all_schedu_tips": "Bạn có chắc chắn muốn xóa tất cả lịch trình không?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Thiết bị đang ở chế độ chờ, không thể khởi động ECO",
     "remote_control_not_support_eco": "Điều khiển từ xa chưa được bật, không thể khởi động ECO",
     "convert_model_not_support_eco": "Thiết bị đang ở chế độ Convert, không thể khởi động ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Để gửi lệnh thoại tới thiết bị thành công, hãy đảm bảo sử dụng tên thiết bị được đặt trong ứng dụng Amazon Alexa.",
+    "va_google_commands_tips": "Để gửi lệnh thoại tới thiết bị thành công, hãy đảm bảo sử dụng tên thiết bị được đặt trong ứng dụng Google.",
+    "va_alexa_commands_link_tips": "Để sử dụng lệnh thoại, hãy liên kết Amazon Alexa của bạn.",
+    "va_google_commands_link_tips": "Để sử dụng lệnh thoại, hãy liên kết bạn với Google.",
+    "link_amazon_alexa": "Liên kết amazon alexa",
+    "link_google": "Liên kết google",
     "issue_category": "Danh mục vấn đề",
     "select_issue_category": "Chọn danh mục vấn đề",
     "issue_cant_connect_device": "Tôi không thể kết nối thiết bị của mình",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Hợp pháp",
     "CL_CF_LG_enduser_privacy": "Chính sách bảo mật dữ liệu",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## thiết bị đang chạy chế độ ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Dựa trên chế độ hoạt động của thiết bị, một số tính năng có thể không được thực thi thành công."
 }
