--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Drücken Sie die% -Taste auf dem Bedienfeld, um sie zu aktivieren.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Sprachassistent-Befehle",
     "edit_favorites": "Favoriten bearbeiten",
     "dom_hot_water": "Warmwasser",
     "delete_all_schedu_tips": "Möchten Sie wirklich den gesamten Zeitplan löschen?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Das Gerät befindet sich im Standby-Modus und kann ECO nicht starten",
     "remote_control_not_support_eco": "Die Fernbedienung ist nicht eingeschaltet, ECO kann nicht gestartet werden",
     "convert_model_not_support_eco": "Das Gerät befindet sich im Convert-Modus und kann ECO nicht starten",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Um erfolgreich Sprachbefehle an das Gerät zu senden, stellen Sie sicher, dass Sie den in der Amazon Alexa-App festgelegten Gerätenamen verwenden.",
+    "va_google_commands_tips": "Um erfolgreich Sprachbefehle an das Gerät zu senden, stellen Sie sicher, dass Sie den in der Google-App festgelegten Gerätenamen verwenden.",
+    "va_alexa_commands_link_tips": "Um Sprachbefehle zu verwenden, verknüpfen Sie Ihr Amazon Alexa.",
+    "va_google_commands_link_tips": "Um Sprachbefehle zu verwenden, verknüpfen Sie Ihr Gerät mit Google.",
+    "link_amazon_alexa": "Amazon Alexa-Link",
+    "link_google": "Link Google",
     "issue_category": "Problemkategorie",
     "select_issue_category": "Problemkategorie auswählen",
     "issue_cant_connect_device": "Ich kann mein Gerät nicht verbinden",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Rechtliches",
     "CL_CF_LG_enduser_privacy": "Datenschutzhinweis",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## Geräte laufen im ECO-Modus",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Abhängig vom Betriebsmodus des Geräts können einige Funktionen möglicherweise nicht erfolgreich ausgeführt werden."
 }
