--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Legal",
     "CL_CF_LG_enduser_privacy": "Data Privacy Policy",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## devices are running ECO mode",
-    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}"
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Based on device's operating mode, some features may not be executed successfully."
 }
