--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "제어판에서% 버튼을 눌러 활성화하십시오.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "음성 보조 명령",
     "edit_favorites": "즐겨찾기 편집",
     "dom_hot_water": "온수",
     "delete_all_schedu_tips": "모든 일정을 삭제하시겠습니까?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "장치는 대기 모드에 있으며 ECO를 시작할 수 없습니다",
     "remote_control_not_support_eco": "원격 제어가 활성화되지 않아 ECO를 시작할 수 없습니다",
     "convert_model_not_support_eco": "장치는 Convert 모드에 있으며 ECO를 시작할 수 없습니다",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "장치에 음성 명령을 성공적으로 보내려면 Amazon Alexa 앱에 설정된 장치 이름을 사용해야 합니다.",
+    "va_google_commands_tips": "기기에 음성 명령을 성공적으로 보내려면 Google 앱에 설정된 기기 이름을 사용해야 합니다.",
+    "va_alexa_commands_link_tips": "음성 명령을 사용하려면 Amazon Alexa를 연결하세요.",
+    "va_google_commands_link_tips": "음성 명령을 사용하려면 Google을 연결하세요.",
+    "link_amazon_alexa": "아마존 알렉사 연결",
+    "link_google": "구글 연결",
     "issue_category": "이슈 카테고리",
     "select_issue_category": "문제 카테고리 선택",
     "issue_cant_connect_device": "내 장치를 연결할 수 없습니다",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "합법적인",
     "CL_CF_LG_enduser_privacy": "데이터 개인 정보 보호 정책",
     "CL_SM_CM_devices_are_running_eco_mode_key": "##개의 기기가 ECO 모드를 실행 중입니다.",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "장치의 작동 모드에 따라 일부 기능이 성공적으로 실행되지 않을 수 있습니다."
 }
