--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "",
     "CL_CF_LG_enduser_privacy": "",
     "CL_SM_CM_devices_are_running_eco_mode_key": "",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": ""
 }
