--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Tekan butang% pada panel kawalan untuk mengaktifkannya.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Perintah Pembantu Suara",
     "edit_favorites": "Edit kegemaran",
     "dom_hot_water": "Air panas domestik",
     "delete_all_schedu_tips": "Adakah anda pasti mahu memadamkan semua penjadualan?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Peranti berada dalam mod siap sedia, tidak dapat memulakan ECO",
     "remote_control_not_support_eco": "Kawalan jauh tidak diaktifkan, tidak dapat memulakan ECO",
     "convert_model_not_support_eco": "Peranti berada dalam mod Convert, tidak dapat memulakan ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Untuk berjaya menghantar arahan suara ke peranti, pastikan anda menggunakan nama peranti yang ditetapkan dalam apl Amazon Alexa.",
+    "va_google_commands_tips": "Untuk berjaya menghantar arahan suara ke peranti, pastikan anda menggunakan nama peranti yang ditetapkan dalam apl Google.",
+    "va_alexa_commands_link_tips": "Untuk menggunakan arahan suara, pautkan Amazon Alexa anda.",
+    "va_google_commands_link_tips": "Untuk menggunakan arahan suara, pautkan anda Google.",
+    "link_amazon_alexa": "Pautkan amazon alexa",
+    "link_google": "Pautkan google",
     "issue_category": "Kategori isu",
     "select_issue_category": "Pilih kategori isu",
     "issue_cant_connect_device": "Saya tidak dapat menyambungkan peranti saya",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "sah",
     "CL_CF_LG_enduser_privacy": "Dasar Privasi Data",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## peranti menjalankan mod ECO",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mod pengendalian peranti, beberapa ciri mungkin tidak berjaya dilaksanakan."
 }
