--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Kontrol panelindeki% düğmesine basın ve etkinleştirin.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Sesli Asistan Komutları",
     "edit_favorites": "Favorileri düzenle",
     "dom_hot_water": "Kullanım sıcak suyu",
     "delete_all_schedu_tips": "Tüm zamanlamayı silmek istediğinizden emin misiniz?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Cihaz bekleme modunda, ECO başlatılamıyor",
     "remote_control_not_support_eco": "Uzaktan kumanda etkinleştirilmemiş, ECO başlatılamıyor",
     "convert_model_not_support_eco": "Cihaz Convert modunda, ECO başlatılamıyor",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Sesli komutları cihaza başarılı bir şekilde göndermek için Amazon Alexa uygulamasında ayarlanan cihaz adını kullandığınızdan emin olun.",
+    "va_google_commands_tips": "Sesli komutları cihaza başarılı bir şekilde göndermek için Google uygulamasında ayarlanan cihaz adını kullandığınızdan emin olun.",
+    "va_alexa_commands_link_tips": "Sesli komutları kullanmak için Amazon Alexa'nızı bağlayın.",
+    "va_google_commands_link_tips": "Sesli komutları kullanmak için Google'ı bağlayın.",
+    "link_amazon_alexa": "Amazon alexa'yı bağlayın",
+    "link_google": "Google'ı bağla",
     "issue_category": "Sorun kategorisi",
     "select_issue_category": "Sorun kategorisini seçin",
     "issue_cant_connect_device": "Cihazımı bağlayamıyorum",
@@ -3996,5 +3996,6 @@
     "CL_CF_LG_legal": "Yasal",
     "CL_CF_LG_enduser_privacy": "Veri Gizliliği Politikası",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## cihaz ECO modunda çalışıyor",
-    "CL_CF_UC_full_name_with_title": ""
+    "CL_CF_UC_full_name_with_title": "",
+    "CL_AU_AC_automation_features_may_not_execute_key": "Cihazın çalışma moduna bağlı olarak bazı özellikler başarıyla yürütülemeyebilir."
 }
